syntax = "proto3";
package decimal.coin.v1;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";

import "decimal/coin/v1/coin.proto";
import "decimal/coin/v1/params.proto";

option go_package = "bitbucket.org/decimalteam/go-smart-node/x/coin/types";

// Query defines the gRPC querier service.
service Query {

  // Retrieves existing coin by specific symbol.
  rpc Coin(QueryCoinRequest) returns (QueryCoinResponse) {
    option (google.api.http).get = "/coin/v1/coin/{symbol}";
  }

  // Retrieves all existing coins.
  rpc Coins(QueryCoinsRequest) returns (QueryCoinsResponse) {
    option (google.api.http).get = "/coin/v1/coins";
  }

  // Retrieves the module params.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/evmos/erc20/v1/params";
  }
}

////////////////////////////////////////////////////////////////
// Coin
////////////////////////////////////////////////////////////////

message QueryCoinRequest {
  string symbol = 1;
}

message QueryCoinResponse {
  Coin coin = 1 [ (gogoproto.nullable) = false ];
}

////////////////////////////////////////////////////////////////
// Coins
////////////////////////////////////////////////////////////////

message QueryCoinsRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryCoinsResponse {
  repeated Coin coins = 1 [ (gogoproto.nullable) = false ];
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

////////////////////////////////////////////////////////////////
// Params
////////////////////////////////////////////////////////////////

message QueryParamsRequest {}

message QueryParamsResponse {
  Params params = 1 [ (gogoproto.nullable) = false ];
}
